// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile r huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 15,
    }
  }
>
  <Image
    aspectRatio={1.7777777777777777}
    style={
      Object {
        "marginBottom": 15,
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          childTestID="article-slug"
          color="#005B8D"
          title="label"
        />
      </View>
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 45,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 45,
          "marginBottom": 0,
        }
      }
      testID="article-summary-headline"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile r medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 30,
      "paddingVertical": 15,
    }
  }
>
  <Image
    aspectRatio={1.7777777777777777}
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          childTestID="article-slug"
          color="#005B8D"
          title="label"
        />
      </View>
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 40,
          "marginBottom": 10,
        }
      }
      testID="article-summary-headline"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile r smallTablet 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 15,
      "paddingVertical": 15,
    }
  }
>
  <Image
    aspectRatio={1.7777777777777777}
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          childTestID="article-slug"
          color="#005B8D"
          title="label"
        />
      </View>
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 40,
          "marginBottom": 10,
        }
      }
      testID="article-summary-headline"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile r wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 20,
      "paddingVertical": 15,
    }
  }
>
  <Image
    aspectRatio={1.7777777777777777}
    style={
      Object {
        "marginBottom": 15,
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          childTestID="article-slug"
          color="#005B8D"
          title="label"
        />
      </View>
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 40,
          "marginBottom": 10,
        }
      }
      testID="article-summary-headline"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;

exports[`tile r without breakpoint should be like medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "paddingHorizontal": 30,
      "paddingVertical": 15,
    }
  }
>
  <Image
    aspectRatio={1.7777777777777777}
    style={
      Object {
        "marginBottom": 10,
        "width": "100%",
      }
    }
    uri="https://www.thetimes.co.uk/imageserver/image/methode%2Ftimes%2Fprod%2Fweb%2Fbin%2Fd3abdbfc-1776-11e6-b4ba-d249b128bacc.jpg?crop=620%2C348%2C0%2C32"
  />
  <View>
    <View>
      <View
        style={
          Object {
            "marginBottom": 5,
          }
        }
      >
        <ArticleLabel
          childTestID="article-slug"
          color="#005B8D"
          title="label"
        />
      </View>
    </View>
    <Text
      accessibilityRole="header"
      aria-level="3"
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 40,
          "fontWeight": "900",
          "includeFontPadding": false,
          "lineHeight": 40,
          "marginBottom": 10,
        }
      }
      testID="article-summary-headline"
    >
      This is tile headline
    </Text>
    <ArticleFlags
      flags={
        Array [
          Object {
            "expiryTime": "2030-03-14T12:00:00.000Z",
            "type": "EXCLUSIVE",
          },
        ]
      }
      longRead={true}
    />
  </View>
</Link>
`;
